--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -594,7 +594,7 @@
     .popup1 {
         width: 400px;
         background: white;
-        font-family: 'poppins', sans-serif;
+        font-family: 'inter';
         border-radius: 6px;
         text-align: center;
         padding: 0 30px 30px;
@@ -636,6 +636,285 @@
 
     }
 
+    /*personal details popup*/
+    .personal-details-popup-box{
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
 
+    .personal-details-popup-form{
+        width: 45%;
+        background: white;
+        border-radius: 6px;
+        top: 0;
+        position: relative;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transition: transform 0.4s, top 0.4s;
+    }
+     
+    .personal-details-popup-form-close{
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px; 
+        height: 20px;
+    }
+    
+    .personal-details-popup{
+        display: grid;
+        grid-template-columns: 40% 60%;
+        width: 100%;
+        border-radius: 4px;
+        height: 100%;
+        padding-top: 10px;
+        margin-top: 17px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    
+    .personal-details-right{
+        display: grid;
+        grid-template-columns: 30% 70%;
+        
+    }
+    
+    .personal-details-right-labels{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 40px;
+        padding-bottom: 50px;
+        padding-left: 25px;
+    }
+    
+    .personal-details-right-labels span{
+        margin-bottom: 15px;
+        font-size: 15px;
+        color: #7c7c7d;
+        
+    }
+    
+    
+    .personal-details-right-values{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 40px;
+        padding-bottom: 50px;
+        padding-left: 32px;
+       
+    }
+    
+    .personal-details-right-values span{
+        margin-bottom: 15px;
+        font-size: 15px;
+        color: #767e95; 
+        font-weight: 550;
+     
+    }
+    
+    .personal-details-left{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        flex-direction: column;
+           
+    }
+    
+    .personal-details-left p{
+        margin-top: 5px;
+        font-size: 15px;
+        color: #7c7c7d;
+    }
+    
+    .personal-details-left span{
+        color: #767e95; 
+        font-weight: 550;
+    
+    }
+    
+    
+    .profile-pic{
+        width: 70%;
+        height: auto;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-bottom: 8px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    
+    }
+    
+    .personal-details-topic{
+        font-size: 18px;
+        font-weight: 500;
+        position: relative;
+        margin-inline-end: auto;
+        margin-top: 15px;
+        
+    }
+    
+    .personal-details-topic::before{
+        content: '';
+        position: absolute;
+        margin-top: 23px;
+        margin-left: 45px;
+        margin-bottom: 15px;
+        height: 3px;
+        width: 45px;
+        background: #1B6652;
+    
+    }
+    
+    
+    @media screen and(max-width: 917px){
+    
+        .personal-details-popup{
+            display: flex;
+            flex-direction: column;
+        }
+    
+    }
+
+    /*Vehicle details popup*/
+    .vehicle-details-popup-box{
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .vehicle-details-popup-form{
+        width:30%;
+        background: white;
+        border-radius: 6px;
+        position: relative;
+        top: 0;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .vehicle-details-popup-form-close{
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px; 
+        height: 20px;
+    }
+    
+    .vehicle-details-popup{
+        display: grid;
+        grid-template-columns: 40% 60%;
+        width: 100%;
+        border-radius: 4px;
+        height: 100%;
+        padding-top: 10px;
+        margin-top: 17px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    
+    .vehicle-details-labels{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 40px;
+        padding-bottom: 50px;
+        padding-left: 60px;
+    }
+    
+    .vehicle-details-labels span{
+        margin-bottom: 15px;
+        font-size: 15px;
+        color: #7c7c7d;
+        
+    }
+    
+    
+    .vehicle-details-values{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 40px;
+        padding-bottom: 50px;
+        padding-left: 60px;
+       
+    }
+    
+    .vehicle-details-values span{
+        margin-bottom: 15px;
+        font-size: 15px;
+        color: #767e95; 
+        font-weight: 550;
+     
+    }
+    
+    
+    .vehicle-details-topic{
+        font-size: 18px;
+        font-weight: 500;
+        position: relative;
+        margin-inline-end: auto;
+        margin-top: 15px;
+        
+    }
+    
+    .vehicle-details-topic::before{
+        content: '';
+        position: absolute;
+        margin-top: 23px;
+        margin-left: 45px;
+        margin-bottom: 15px;
+        height: 3px;
+        width: 45px;
+        background: #1B6652;
+    
+    }
+    
+    
+    @media screen and(max-width: 1307px){
+    
+        .vehicle-details-labels{
+            padding-left: 40px;
+        }
+    
+        .vehicle-details-values{
+            padding-left: 40px;
+        }
+    }
+    
 
 }
