--- a/public/css/Component/Animation/main.css
+++ b/public/css/Component/Animation/main.css
@@ -9,8 +9,28 @@
     }
 
     50% {
-        transform: translateX(0) translateY(-10px);
+        transform: translateX(0) translateY(-4px);
         animation-timing-function: ease-in-out;
     }
 
+}
+
+@keyframes Move_Left_to_Right {
+
+    0% {
+        transform: translateX(-10px);
+        animation-timing-function: ease-in-out;
+
+    }
+
+    100% {
+        transform: translateX(-10px);
+        animation-timing-function: ease-in-out;
+
+    }
+
+    50% {
+        transform: translateX(10px);
+        animation-timing-function: ease-in-out;
+    }
 }
