--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -365,7 +365,7 @@
         top: 50%;
     }
 
-    .popup img {
+    .confirm_collect_pop .popup img {
         width: 100px;
         height: 100px;
         margin-top: 35px;
@@ -451,6 +451,8 @@
         margin-top: 35px;
         border-radius: 50%;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        animation: bounceAndMove 2s ease infinite;
+
     }
 
     .popup h2 {
