--- a/public/css/Component/Customer/Customer_Editprofile.css
+++ b/public/css/Component/Customer/Customer_Editprofile.css
@@ -17,7 +17,7 @@
 
     .main-right {
         display: grid;
-        grid-template-rows: 10% 90%;
+        grid-template-rows: 9.5% 90.5%;
         height: 100%;
     }
 
@@ -29,12 +29,18 @@
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
+    .main-right-top-component {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-right: 13px;
+    }
+
     .main-right-top img {
-        width: 50px;
-        height: 50px;
-        margin-left: 5px;
+        width: 55px;
+        height: 55px;
+        margin-left: 15px;
         border-radius: 50%;
-        margin-right: 10px;
     }
 
     .main-right-top p {
