--- a/public/css/Component/Customer/Customer_Request_Ongoing.css
+++ b/public/css/Component/Customer/Customer_Request_Ongoing.css
@@ -94,6 +94,7 @@
 
 .main-right-bottom-two-content h1 {
     font-size: 25px;
+    font-weight: 500;
 }
 
 .main-right-bottom-two-content button {
@@ -109,8 +110,8 @@
     letter-spacing: 1px;
     background: #1B6652;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    margin-bottom: 25px;
-    margin-top: 25px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 
