--- a/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
@@ -13,6 +13,7 @@
     .main-right-bottom {
         flex-direction: column;
         height: 550px;
+        display: none;
     }
 
     .map-locations {
@@ -46,7 +47,7 @@
     }
 
     .Location {
-        display: none;
+        display: flex;
         position: fixed;
         top: 0;
         left: 0;
