--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,7 @@
 
 @import url('Component/CenterManager/CenterManager_Request_Main.css');
 @import url('Component/CenterManager/CenterManager_Request_Incomming.css');
+@import url('Component/CenterManager/CenterManager_Request_Cancelled.css');
 
 @import url('Component/CenterManager/CenterManager_EditProfile.css');
 
