--- a/public/css/Component/Animation/main.css
+++ b/public/css/Component/Animation/main.css
@@ -61,3 +61,40 @@
         height: 40%;
     }
 }
+
+/*Admin-center-chart-animations*/
+@keyframes first {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(90deg);
+    }
+}
+  
+@keyframes second {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(90deg);
+    }
+}
+
+@keyframes third {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(90deg);
+    }
+}
+
+@keyframes fouth {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(90deg);
+    }
+}
