--- a/public/css/Component/Admin/Admin_Center_Add.css
+++ b/public/css/Component/Admin/Admin_Center_Add.css
@@ -40,7 +40,9 @@
         width: 600px;
         display: grid;
         grid-template-rows: 20% 80%;
-        border: 1px solid #ddd;
+        /* border: 1px solid #ddd; */
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
         height: 90%;
 
     }
