--- a/public/css/Component/Admin/Admin_Center_Top.css
+++ b/public/css/Component/Admin/Admin_Center_Top.css
@@ -12,7 +12,15 @@
         color: inherit;
     }
 
-    .main {
+    /* .main {
+        width: 100%;
+        height: 727px;
+        display: grid;
+        grid-template-rows: 8% 92%;
+        overflow: hidden;
+    } */
+
+    .main-right {
         width: 100%;
         height: 727px;
         display: grid;
@@ -66,9 +74,9 @@
     }
 
     .main-bottom-top {
-        border-bottom: 1px solid #e1e1e1;
+        /* border-bottom: 1px solid #e1e1e1; */
         border-radius: 10px;
-        box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+        /* box-shadow: 0 0 1px rgba(0, 0, 0, 0.1); */
     }
 
 
