--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -444,4 +444,81 @@
 
   }
 
+
+
+   /*request details*/
+   .request-details-pop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.request-details-pop-form {
+    width: 45%;
+    background: white;
+    border-radius: 6px;
+    top: 0;
+    position: relative;
+    text-align: center;
+    padding: 30px;
+    color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.4s, top 0.4s;
+    flex-direction: column;
+
+}
+
+.request-details-pop-form-top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 25px;
+    font-size: 18px;
+}
+
+.request-details-pop-form-close {
+    width: 25px;
+    height: 25px;
+    margin-left: 100%;
+    margin-top: -3%;
+    cursor: pointer;
+}
+
+.request-details-topic {
+    display: flex;
+}
+
+.request-details-pop-form-content {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    width: 80%;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+
+}
+
+.request-details-topic::before {
+    content: '';
+    position: absolute;
+    margin-top: 23px;
+    margin-left: 45px;
+    margin-bottom: 15px;
+    height: 4px;
+    width: 67px;
+    background: #1B6652;
+
+}
+
+/* ------------*/
+
 }
