--- a/public/css/Component/Admin/Admin_Center_Main.css
+++ b/public/css/Component/Admin/Admin_Center_Main.css
@@ -295,6 +295,12 @@
         justify-content: center;
         /* width: 80%; */
       }
+
+      .analytic:hover {
+        background-color: #e4ffe2;
+        box-shadow: rgba(17, 17, 26, 0.2) 4px 4px 20px; 
+        scale: 1.1;
+      }
       
       .analytic-info h3 {
         font-weight: 400;
